...
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="25sp">
    </TextView>

    <Button
        android:id="@+id/scan_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/grey_button"
        android:clickable="true"
        android:focusable="true"
...
